Fix nav bar bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -307,7 +307,7 @@ li {
     top: 102px;
     background-color: white;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     transition: 0.5s;
   }
 
